# py-unfolded-circle

./: .gitignore  CLI_USAGE.md  pyproject.toml  readme.md  test.py
.github/workflows/: publish.yml
examples/: example_script.py
src/pyUnfoldedCircleRemote/: __init__.py  cli.py  remote.py
unfolded-circle/: remote.py
