[tool.poetry]
name = "pyUnfoldedCircleRemote"
version = "0.15.0"
description = "A python library to interact with the Unfolded Circle Remote"
authors = ["Jack Powell <jackjpowell@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackjpowell/py-unfolded-circle"
packages = [{include = "pyUnfoldedCircleRemote", from = "src"}]

[tool.poetry.scripts]
uc-remote = "pyUnfoldedCircleRemote.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"
wakeonlan = "*"
packaging = "*"
zeroconf = "*"
click = {version = "*", optional = true}
rich = {version = "*", optional = true}

[tool.poetry.extras]
cli = ["click", "rich"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"